[project]
name = "sentinel-ingestion-engine"
version = "1.0.0"
description = "Multi-source OSINT harvesting and AI-driven battlespace awareness logic."
authors = [
    { name = "Sentinel Dev Team" }
]
dependencies = [
    "httpx>=0.27.0",
    "polars>=0.20.0",
    "google-generativeai>=0.4.0",
    "geopy>=2.4.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ingestion_engine"]
